--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ span,a,p{
   font-weight: bold;
   word-spacing: 1rem;
   font-size: 2rem;
-  padding-top: 2rem;
-  color: var(--preto)
+  color: var(--preto);
+  padding-top: 2rem
 }
 .heading-2{
   text-align: center;
@@ -58,8 +58,23 @@ span,a,p{
   font-weight: bold;
   word-spacing: 1rem;
   font-size: 2rem;
-  padding-top: 2rem;
-  color: var(--bege)
+  color: var(--bege);
+  padding-top: 2rem
+}
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-panel {
+  background-color: var(--prata);
+}
+audio{
+  border: 3px solid var(--pardo);
+  border-radius: 2rem;
+  height: 2.5rem
+}
+.btn{
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  background: var(--pardo);
+  color: var(--branco)
 }
 /* Navbar */
 header{
@@ -174,24 +189,29 @@ header{
   background: var(--bege);
 }
 .about-content{
-  min-height: 85vh;
+  min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2rem 0
 }
-.about-content p{
+.about-text{
   width: 20rem;
   padding: 2rem;
   background: var(--preto);
   color: var(--bege);
   border-radius: 0 4rem 4rem 0
 }
+.about-text p{
+  text-indent: 25px;
+  padding: 10px 0;
+}
 .about-content b{
   font-weight: 700
 }
 .about-img{
   width: 20rem;
-  height: 26.6rem;
+  height: 31.5rem;
   object-fit: cover;
   object-position: 0% 20%;
   border-radius: 4rem 0 0 4rem
@@ -199,10 +219,76 @@ header{
 
 /* Portfólio */
 #portfolio{
-  background: var(--preto)
+  background: url("https://i.imgur.com/6bGnk2X.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .portfolio-content{
-  min-height: 100vh
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  padding: 2rem 0;
+}
+.card-music{
+  color: var(--preto);
+  max-width: 20rem;
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(45deg, var(--pardo), var(--bege));
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 3px black;
+}
+.card-music h4{
+  font-weight: bold;
+  letter-spacing: 1px
+}
+
+/* Contato */
+#footer{
+  background: #2a1b09
+}
+.footer-content{
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  max-width: 40rem;
+}
+.footer-direct{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 4.5rem;
+  justify-content: space-between;
+}
+.footer-direct a{
+  color: var(--branco)
+}
+.footer-social{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 10rem;
+}
+.footer-social i{
+  font-size: 2rem;
+  color: var(--bege)
+}
+.criador{
+  color: var(--bege);
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  font-family: var(--titulo);
 }
 @media (max-width: 885px){
   .home-img{
@@ -246,12 +332,17 @@ header{
     background-size: cover;
     background-position: top;
   }
-  .about-content p{
-    width: 20rem;
+  .about-content{
     padding: 2rem;
-    background: #3c260c78;
     color: var(--bege);
-    border-radius: 3rem
+  }
+  .about-text{
+    max-width: 30rem;
+    width: 100%;
+    background: #3c260c78;
+    border-radius: 3rem;
+    backdrop-filter: blur(5px);
+    border: 0.1rem solid #714b1d
   }
   #about .heading{
     color: var(--bege)
@@ -261,11 +352,21 @@ header{
   .home-text h1{
     font-size: 1.8rem
   }
-  .home-text .social i{
+  .home-text .social i,.contact-perfil .social i{
     font-size: 1.5rem
   }
   .home-text span{
     font-size: 12px
+  }
+  .footer-content{
+    flex-direction: column;
+  }
+  .footer-social{
+    margin: auto;
+    padding-top: 2rem
+  }
+  .footer-social i{
+    font-size: 1.3rem
   }
 }
 @media (max-width: 425px){
